--- a/app/views/foreman_docker/common_parameters/_dns.erb
+++ b/app/views/foreman_docker/common_parameters/_dns.erb
@@ -1,16 +1,8 @@
-<div class='fields'>
-  <table class="table table-bordered table-hover table-striped">
-    <tr class="form-group <%= 'has-error' if f.object.errors.any? %>">
-      <td><%= f.text_field(:name,  :class => "form-control",
-                                   :placeholder => _("DNS e.g: 8.8.8.8")) %></td>
-      <td style='vertical-align: middle' class='text-center'>
-        <span class="help-block">
-          <%= link_to_remove_fields('', f) %>
-        </span>
-      </td>
-      <span class="help-block">
-        <%= f.object.errors.full_messages.to_sentence %>
-      </span>
-    </tr>
-  </table>
-</div>
+<table class="table table-bordered table-hover table-striped" id="dns_table">
+  <tbody>
+    <%= f.fields_for :dns, @docker_container_wizard_states_environment.dns do |builder| %>
+      <%= render 'foreman_docker/common_parameters/dns_entry', :f => builder %>
+    <% end %>
+  </tbody>
+</table>
+<%= link_to_add_fields(_("Add DNS"), f, :dns, 'foreman_docker/common_parameters/dns_entry', :target => '#dns_table tbody') %>
