--- a/app/views/foreman_docker/common_parameters/_environment_variable.html.erb
+++ b/app/views/foreman_docker/common_parameters/_environment_variable.html.erb
@@ -1,18 +1,14 @@
-<div class='fields'>
-  <table class="table table-bordered table-hover table-striped">
-    <tr class="form-group <%= 'error' if f.object.errors.any? %>">
-      <td><%= f.text_field(:name,  :class => "form-control",
-                                   :placeholder => _("Name, e.g: PING_HOST")) %></td>
-      <td><%= f.text_field(:value, :class => "form-control",
-                                   :placeholder => _("Value, e.g: theforeman.org")) %></td>
-      <td style='vertical-align: middle' class='text-center'>
-        <span class="help-block">
-          <%= link_to_remove_fields('', f) %>
-        </span>
-      </td>
-      <span class="help-block">
-        <%= f.object.errors.full_messages.to_sentence %>
-      </span>
-    </tr>
-  </table>
-</div>
+<tr class="fields form-group <%= 'error' if f.object.errors.any? %>">
+  <td><%= f.text_field(:name, :class => "form-control",
+                       :placeholder  => _("Name, e.g: PING_HOST")) %></td>
+  <td><%= f.text_field(:value, :class => "form-control",
+                       :placeholder   => _("Value, e.g: theforeman.org")) %></td>
+  <td style='vertical-align: middle' class='text-center'>
+    <span class="help-block">
+      <%= link_to_remove_fields('', f) %>
+    </span>
+  </td>
+  <span class="help-block">
+    <%= f.object.errors.full_messages.to_sentence %>
+  </span>
+</tr>
