--- a/app/views/foreman_docker/common_parameters/_exposed_ports.erb
+++ b/app/views/foreman_docker/common_parameters/_exposed_ports.erb
@@ -1,17 +1,10 @@
-<div class='fields'>
-  <table class="table table-bordered table-hover table-striped">
-    <tr class="form-group <%= 'has-error' if f.object.errors.any? %>">
-      <td><%= f.text_field(:name,  :class => "form-control",
-                                   :placeholder => _("Port Number e.g: 22")) %></td>
-      <td><%= f.select :value, [['TCP','tcp'],['UDP','udp']]  %></td>
-      <td style='vertical-align: middle' class='text-center'>
-        <span class="help-block">
-          <%= link_to_remove_fields('', f) %>
-        </span>
-      </td>
-      <span class="help-block">
-        <%= f.object.errors.full_messages.to_sentence %>
-      </span>
-    </tr>
-  </table>
-</div>
+<table class="table table-bordered table-hover table-striped"  id="exposed_ports_table">
+  <tbody>
+    <%= f.fields_for :exposed_ports, @docker_container_wizard_states_environment.exposed_ports do |builder| %>
+      <%= render 'foreman_docker/common_parameters/exposed_port', :f => builder %>
+    <% end %>
+  </tbody>
+</table>
+<%= link_to_add_fields(_("Add Exposed Port"), f, :exposed_ports,
+                       'foreman_docker/common_parameters/exposed_port',
+                       :target => '#exposed_ports_table tbody') %>
