Fixes #13227 - error when creating a container without an image

--- a/app/views/containers/steps/_image_hub_tab.html.erb
+++ b/app/views/containers/steps/_image_hub_tab.html.erb
@@ -34,6 +34,9 @@
           <% end %>
         </span>
       </div>
+       <span class="help-block <%= 'has-error' if f.object.errors.any? %>">
+          <%= f.object.errors.full_messages.to_sentence %>
+        </span>
     </div>
     <%= text_f f, :tag,
                   :'data-registry' => registry,
