Fixes #13043 - Change Parameter inheritance to DockerParameter

--- a/app/views/containers/show.html.erb
+++ b/app/views/containers/show.html.erb
@@ -69,7 +69,7 @@
               <td><%= _('Environment Variables') %></td>
               <td>
                 <table id="environment_variables" class="table table-bordered" style="table-layout:fixed; word-wrap: break-word">
-                  <% (@container.in_fog.attributes['config_env'] || []).each do |environment_variable| %>
+                  <% (@container.in_fog.environment_variables || []).each do |environment_variable| %>
                   <% pair = environment_variable.split("=") %>
                     <tr>
                       <td><b><%= pair.first %></b></td>
