--- a/app/views/foreman_docker/common_parameters/_dns_entry.html.erb
+++ b/app/views/foreman_docker/common_parameters/_dns_entry.html.erb
@@ -1,5 +1,5 @@
 <tr class="fields form-group <%= 'has-error' if f.object.errors.any? %>">
-  <td><%= f.text_field(:name,  :class => "form-control",
+  <td><%= f.text_field(:key,  :class => "form-control",
                        :placeholder => _("DNS e.g. 8.8.8.8")) %></td>
   <td style='vertical-align: middle' class='text-center'>
     <span class="help-block">
