--- a/app/views/foreman_docker/common_parameters/_environment_variable.html.erb
+++ b/app/views/foreman_docker/common_parameters/_environment_variable.html.erb
@@ -1,5 +1,5 @@
 <tr class="fields form-group <%= 'error' if f.object.errors.any? %>">
-  <td><%= f.text_field(:name, :class => "form-control",
+  <td><%= f.text_field(:key, :class => "form-control",
                        :placeholder  => _("Name, e.g. PING_HOST")) %></td>
   <td><%= f.text_field(:value, :class => "form-control",
                        :placeholder   => _("Value, e.g. example.org")) %></td>
