--- a/app/views/foreman_docker/common_parameters/_exposed_port.html.erb
+++ b/app/views/foreman_docker/common_parameters/_exposed_port.html.erb
@@ -1,5 +1,5 @@
 <tr class="fields form-group <%= 'has-error' if f.object.errors.any? %>">
-  <td><%= f.text_field(:name,  :class => "form-control",
+  <td><%= f.text_field(:key,  :class => "form-control",
                        :placeholder => _("Port number e.g. 22")) %></td>
   <td><%= f.select :value, [['TCP','tcp'],['UDP','udp']]  %></td>
   <td style='vertical-align: middle' class='text-center'>
