Refs #14370 - Adding new_link helper to containers and registries

--- a/app/views/registries/index.html.erb
+++ b/app/views/registries/index.html.erb
@@ -1,8 +1,6 @@
 <% title _("Registries") %>
 
-<%= title_actions(display_link_if_authorized(
-  _('New registry'),
-  hash_for_new_registry_path)) %>
+<%= title_actions(new_link(_("New registry"))) %>
 
 <table class="table table-bordered table-striped table-condensed" data-table="inline">
   </thead>
