--- a/app/views/containers/index.html.erb
+++ b/app/views/containers/index.html.erb
@@ -1,8 +1,6 @@
 <% title _("Containers") %>
 
-<%= title_actions(display_link_if_authorized(
-  _('New container'),
-  hash_for_new_container_path)) %>
+<%= title_actions(new_link(_("New container"))) %>
 
 <ul class="nav nav-tabs" data-tabs="tabs">
   <% @container_resources.each_with_index do |resource, i| %>
